<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/white_back_angular_box"
    android:orientation="vertical"
    android:paddingTop="10dp"

    android:paddingBottom="16dp"

    >



    <com.doctordesh.customViews.RobotoMediumTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="16dp"
        android:text="@string/txt_select_referral_from"
        android:textColor="@color/light_green"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <com.doctordesh.customViews.RobotoRegularTextView
        android:id="@+id/tv_option_nursing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_marginTop="5dp"
        android:drawableRight="@drawable/ic_right_black"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/txt_referral_from_nursing_assisted_living_facility"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.doctordesh.customViews.RobotoRegularTextView
        android:id="@+id/tv_option_hospital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_right_black"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/txt_referral_from_hospital_outpatient_facility"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="@color/grey_3" />







</LinearLayout>